# roomfi-sub0

./: INSTRUCCIONES_DEPLOYMENT.md  MILESTONE_2.md  README.md  SUBWALLET_SETUP.md  WALLET_CONNECTION.md  netlify.toml
Foundry/: README.md  deployment-addresses.json  foundry.toml  test-mirrors.sh
Foundry/pallets/: POLKAVM_INTEGRATION_ANALYSIS.md
Foundry/pallets/roomfi-bridge/: Cargo.toml
Foundry/pallets/roomfi-bridge/src/: lib.rs
Foundry/script/: DeployRoomFiV2.s.sol
Foundry/script/Mirrors/: DeployMirrors.s.sol
Foundry/src/Mirrors/: ISMPMessageHandler.sol  PropertyRegistryMirror.sol  TenantPassportMirror.sol
Foundry/src/V2/: Interfaces.sol  PropertyRegistry.sol  RentalAgreement.sol  RentalAgreementFactory.sol  RentalAgreementWithVault.sol  RoomFiVault.sol  TenantPassportV2.sol
Foundry/test/: CompileV2.t.sol
docs/: ANALISIS_COMPATIBILIDAD_FRONTEND_CONTRATOS.md  DEPLOYMENT.md  FRONTEND_INTEGRATION_CHECKLIST.md  RENTAL_AGREEMENT_IMPLEMENTATION.md  RUTAS.md
src/: App.tsx  Header.tsx  LandingPage.tsx  PropertyRegistryPage.tsx  SubwalletAuthModal.tsx  WalletModal.tsx
src/components/: CreateRentalAgreement.tsx  MyAgreementsPage.tsx  NetworkIndicator.tsx  RentalAgreementView.tsx
src/providers/: PolkadotProvider.tsx
src/web3/: config.ts  mockData.ts
src/web3/abis/: DISPUTE_RESOLVER_ABI.json  PROPERTY_REGISTRY_ABI.json  RENTAL_AGREEMENT_FACTORY_ABI.json  ROOMFI_VAULT_ABI.json
