[package]
name = "pallet-roomfi-bridge"
version = "0.1.0"
authors = ["RoomFi Team <noreply@roomfi.io>"]
edition = "2021"
license = "MIT"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }

# Hyperbridge ISMP
pallet-ismp = { version = "1.0.0", default-features = false }
ismp = { version = "1.0.0", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[features]
default = ["std", "mock-polkavm"]  # Por defecto usa mock data para hackathon
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "pallet-ismp/std",
    "ismp/std",
]

# Feature flag para usar mock data de PolkaVM (hackathon)
# Para producción, compilar sin este flag
mock-polkavm = []
